<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Agenda">

    <LinearLayout
        android:id="@+id/activity_training_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="180dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/android_logo" />

            <ImageView
                android:id="@+id/paper_note"
                android:layout_width="92dp"
                android:layout_height="89dp"
                android:layout_gravity="top|right"
                android:src="@drawable/ruled_paper_note_with_pin" />

            <TextView
                android:id="@+id/textjudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:text="Agenda Pelatihan"
                android:textSize="35sp"
                android:textStyle="bold" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="#E5E5E5"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/day_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tpcc_map"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:text="@string/play_with_android_studio"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/day_2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/schedule"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:text="@string/layout_and_single_page_app"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="#E5E5E5"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/day_3"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:text="@string/intent_and_multi_screen_app"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/day_4"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:text="@string/material_design_and_storage"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="10dp"
            android:background="#E5E5E5"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/day_5"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:paddingLeft="10dp"
                android:text="@string/background_services_and_app_distribution"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"></View>

        <Button
            android:id="@+id/buttondaftar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF0206F9"
            android:text="DAFTAR"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>